# aist_robotiq

./: Doxyfile  README.md  dependencies.repos
.github/workflows/: build.yaml  docs-gh-pages.yaml  doxygen-gh-pages.yml  humble-build.yaml  jazzy-build.yaml
aist_robotiq/: CMakeLists.txt  Doxyfile  package.xml
aist_robotiq/aist_robotiq/: client.py  cmodel_base.py  cmodel_modbus.py  cmodel_urcap.py  simple_action_client.py
aist_robotiq/config/: default.yaml
aist_robotiq/hooks/: aist_robotiq.dsv.in  aist_robotiq.sh.in
aist_robotiq/launch/: aist_robotiq.rviz  display.launch.py  gazebo.launch.py  launch.py  test.launch.py  test_dual_gripper.launch.py  test_status_sub.launch.py
aist_robotiq/meshes/collision/: robotiq_arg2f_85_inner_finger.dae  robotiq_arg2f_85_inner_knuckle.dae  robotiq_arg2f_85_outer_finger.dae  robotiq_arg2f_85_outer_knuckle.dae  robotiq_hande-collision.dae  robotiq_hande_finger_1-collision.dae  robotiq_hande_finger_2-collision.dae
aist_robotiq/scripts/: cmodel_driver.py  test_dual_gripper_client.py  test_gripper_client.py  test_suction_client.py
aist_robotiq/src/: ft300_driver.cpp  gripper_controller.cpp  suction_controller.cpp
aist_robotiq/urdf/: dual_gripper.urdf  robotiq_140_gripper.urdf  robotiq_140_gripper.urdf.xacro  robotiq_3f_gripper.urdf  robotiq_3f_gripper.urdf.xacro  robotiq_85_gripper.urdf  robotiq_85_gripper.urdf.xacro  robotiq_arg2f.xacro  robotiq_arg2f_coupling.urdf.xacro  robotiq_epick_gripper.urdf  robotiq_epick_gripper.urdf.xacro  robotiq_gz.ros2_control.xacro  robotiq_hande_gripper.urdf  robotiq_hande_gripper.urdf.xacro
aist_robotiq_msgs/: CMakeLists.txt
aist_robotiq_msgs/action/: SetMode.action  SuctionCommand.action
aist_robotiq_msgs/msg/: CModelCommand.msg  CModelStatus.msg  ObjectState.msg  SuctionCommand.msg
aist_robotiq_msgs/srv/: SetVelocity.srv
