<?xml version="1.0"?>
<package format="3">

  <name>aist_robotiq</name>
  <version>0.1.0</version>
  <description>The aist_robotiq package</description>
  <author>Toshio UESHIBA</author>
  <maintainer email="t.ueshiba@aist.go.jp">Toshio UESHIBA</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <depend>rclcpp_components</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>ddynamic_reconfigure2</depend>
  <depend>pluginlib</depend>
  <depend>hardware_interface</depend>
  <depend>control_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>aist_robotiq_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>builtin_interfaces</depend>
  <depend>controller_interface</depend>
  <depend>eigen</depend>
  <!-- <depend>ros_gz_sim</depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
